@@ -3,6 +3,7 @@ Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
 to Subversion revision numbers (rXXXXX).
 
 WinMerge 2.7.7.3
+  Resolve conflict files (cvs, svn...) (#1875129)
   BugFix: Fix Quick Compare regression in 2.7.7.2 (#1872165)
   Bugfix: Clipped text in file saving error message (#1874854)
 
